# MMGen

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  tpms_docs.md
mmgen/: config.py  generator.py  grading.py  tpms_types.py  utils.py
src/mmgen/: cli.py  config.py  grading.py  tpms_types.py  utils.py
tests/: test_cli.py  test_config.py  test_generator.py  test_grading.py  test_lids.py  test_tpms_types.py  test_utils.py
