[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mmgen"
version = "0.1.0"
description = "A module for generating TPMS structures with intersections."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==1.26.4",
    "scikit-image",
    "trimesh",
    "pycork",
    "matplotlib",
    "numpy-stl",
    "beautifulsoup4",
    "pyparsing",
    "lxml",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mmgen*"]
