[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mmgen"
version = "0.1.0"
description = "A module for generating TPMS structures with intersections."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0,<3",
    "scikit-image",
    "trimesh",
    "manifold3d",
    "matplotlib",
    "numpy-stl",
    "beautifulsoup4",
    "pyparsing",
    "lxml",
    "pydantic"
]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mmgen*"]
